--- a/sales.html
+++ b/sales.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Pat's Salmon Cookies</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> <!--google fonts-->
-  </head>
-  <nav>
-    <ul>
-      <li><a href='index.html'>Home</a></li>
-      <li><a href='sales.html'>Sales</a></li>
-    </ul>
-  </nav>
-  <h1>Pat's Salmon Cookies</h1>
-  <h2>Production Data:</h2>
+<html lang="en">
+<head>
+  <!--metadata start-->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <!--metadata end-->
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> <!--google fonts requirement-->
+  <title>Pat's Salmon Cookies</title>
+</head>
   <body>
-  <section id="production-data">
-    <div id="firstPike">1st and Pike</div>
-    <div id="seatacAirport">Seatac Airport</div>
-    <div id="seattleCenter">Seattle Center</div>
-    <div id="capitolHill">Capitol Hill</div>
-    <div id="alki">Alki</div>
-  </section>
-  <script type="text/javascript" src="app.js"></script>
+    <nav>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="sales.html">Sales</a></li>
+            </ul>
+    </nav>
+    <h1>Pat's Salmon Cookies</h1>
+    <h2>Production Data:</h2>
+    <section id='data'>
+        <div id='firstPike'>
+             1st and Pike
+        </div>
+        <div id='seatacAirport'>
+             Seatac Airport
+        </div>
+        <div id='seattleCenter'>
+             Seattle Center
+        </div>
+        <div id='capitolHill'>
+            Capitol Hill
+        </div>
+        <div id='alki'>
+            Alki
+        </div>
+    </section>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
